--- a/src/projects.html
+++ b/src/projects.html
@@ -16,7 +16,7 @@
    <header class="header-resume" id="header-resume">
        <div class="items titr-container">
         <h1 class="titr-items font-titr1">Elham Hashemi</h1>
-        <h4 class="font-titr2">Web Develop/Programing</h4>
+        <h4 class="font-titr2">Web Development/Programming</h4>
        </div>
        
        <div class="items margin-flex2 hamburger-container">
