--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="items-main">
                 <p class="p-about">I was born in 1977 in Isfahan, Iran.
                      After graduating from Najafabad Azad University, I studied computer engineering in the field of software and in 2002 I got a bachelor's degree.
-                     I worked in web design for about 10 years and gained a lot of experience working with FrontPage, Phptoshop, Access Database and ASP ... Active Server Page software.I immigrated to Germany in 2017 with my wife and child and started learning HTML, CSS, JAVASCRIPT at DCI - Digital Career Institute from 25.5.2010. And I was able to update my knowledge of Web Develop.
-                     And I always enjoy working in this field.</p>
+                     I worked in web design for about 10 years and gained a lot of experience working with FrontPage, Phptoshop, Access Database and ASP(Active Server Page) software.I immigrated to Germany in 2017 with my wife and child and started learning HTML, CSS, JAVASCRIPT at DCI - Digital Career Institute in 2020. There I was able to update my knowledge of Web Development.
+                     I enjoy working in this field very much.</p>
                   
             </div>
 
