--- a/src/projects.html
+++ b/src/projects.html
@@ -46,14 +46,16 @@
       <div class=" mb-5 mt-5">
         <div class="row ">
           <div class="col-md-7">
-            <a href="#" target="blank"><img src="./images/survey2.jpg" alt="..."></a>
+            <a href="#" target="blank"><img src="./images/survey.jpg" alt="..."></a>
           </div>
           <div class="col-md-5 pl-2">
             <div class="card-body">
               <div class="aa-font link-main-pro aa">Project | 11</div>
               <div class="line-pro2 right-items"></div>
               <h5 class="card-title mt-3">Survey APP</h5>
-              <p class="card-text">Under Constraction</p>
+              <p class="card-text">Under Construction</p>
+              <p>Development of a feedback tool for a medium-sized Companies .</p>
+              <p>React - UI Material - Javascript - Mongo DB</p>
               <p class="card-text"><small class="text-muted">Last updated : 08.08.2021</small></p>
             </div>
           </div>
@@ -73,7 +75,7 @@
               <div class="aa-font link-main-pro aa">Project | 10</div>
               <div class="line-pro2 right-items"></div>
               <h5 class="card-title mt-3">Home SERVICES & REPAIRS</h5>
-              <p class="card-text">Under Constraction</p>
+              <p class="card-text">Under Construction</p>
               <p class="card-text"><small class="text-muted">Last updated : 08.07.2021</small></p>
             </div>
           </div>
@@ -93,7 +95,8 @@
               <div class="aa-font link-main-pro aa">Project | 09</div>
               <div class="line-pro2 right-items"></div>
               <h5 class="card-title mt-3">Polly</h5>
-              <p class="card-text">Final Projekt: HTML-CSS-REACT-JAVASCRIRI-EXPRESS-MONGODB</p>
+              <p class="card-text">Final Project from DCI Course</p>
+              <p class="card-text">HTML-CSS-REACT-JAVASCRIRI-EXPRESS-MONGODB</p>
               <p class="card-text"><small class="text-muted">Last updated : 17.06.2021</small></p>
             </div>
           </div>
@@ -153,7 +156,7 @@
             <div class="card-body">
               <div class="aa-font link-main-pro aa">Project | 06</div>
               <div class="line-pro2 right-items"></div>
-              <h5 class="card-title mt-3"></h5>Resume with React</h5>
+              <h5 class="card-title mt-3">Resume with React</h5>
               <p class="card-text">My resume in the form of a small website with React framework</p>
               <p class="card-text"><small class="text-muted">Last updated : 23.10.2020</small></p>
             </div>
@@ -243,25 +246,6 @@
 
       <!-- *******************Isfahan project2 ******************************  -->
 
-      <!-- *******************Seigostar project1" ******************************  -->
-      <div class=" mb-5 mt-5">
-        <div class="row ">
-          <div class="col-md-7">
-            <a href="http://www.seirgostar.com/" target="blank"><img src="./images/seirgostar.jpg" alt="..."></a>
-          </div>
-          <div class="col-md-5 pl-2">
-            <div class="card-body">
-              <div class="aa-font link-main-pro aa">Project | 01</div>
-              <div class="line-pro2 right-items"></div>
-              <h5 class="card-title mt-3">Seirgostar Travel Agency</h5>
-              <p class="card-text">This is a website for a travel agency that offers tours inside and outside Iran. This website is the only example of old websites I designed and whose address is still active on the internet. The design is based on FrontPage and the dynamic pages are based on the ASP and ACCESS databases.</p>
-              <p class="card-text"><small class="text-muted">Last updated :   many years age</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- *******************Seigostar project1 ******************************  -->
 
             
      
