--- a/src/projects.html
+++ b/src/projects.html
@@ -41,7 +41,29 @@
     <div class="container">
       <div class="line-pro"></div>
 
-
+       <!-- *******************survey project12 ******************************  -->
+       <div class=" mb-5 mt-5">
+        <div class="row ">
+          <div class="col-md-7">
+            <a href="https://elhamhashemi56.github.io/Bitcoin-Price" target="blank"><img src="./images/bitcoin.jpg" alt="..."></a>
+          </div>
+          <div class="col-md-5 pl-2">
+            <div class="card-body">
+              <div class="aa-font link-main-pro aa">Project | 12</div>
+              <div class="line-pro2 right-items"></div>
+              <h5 class="card-title mt-3">Bitcoin Price</h5>
+              <p>This application renders an HTML page. A form is on this site with a date range (from - to) with 
+                prefilled values "today" until "today - 10 days". Below is a linegraph with the days on the x-axis 
+                and the Bitcoin value in USD on the y-axis. The user can give any date range with which the fitting 
+                graph will be rendered.</p>
+              <p>React - Sass - Javascript </p>
+              <p class="card-text"><small class="text-muted">Last updated : 29.08.2021</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+     
+      <!-- *******************survey project12 ******************************  -->
       <!-- *******************survey project11 ******************************  -->
       <div class=" mb-5 mt-5">
         <div class="row ">
