--- a/src/projects.html
+++ b/src/projects.html
@@ -56,7 +56,7 @@
                 prefilled values "today" until "today - 10 days". Below is a linegraph with the days on the x-axis 
                 and the Bitcoin value in USD on the y-axis. The user can give any date range with which the fitting 
                 graph will be rendered.</p>
-              <p>React - Sass - Javascript </p>
+              <p>React(Hook - Context) - Sass - Javascript </p>
               <p class="card-text"><small class="text-muted">Last updated : 29.08.2021</small></p>
             </div>
           </div>
